tests/snapshots/examples_fixtures/aoc__2025__aoc_day8_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day8_part2.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/aoc/2025/aoc_day8_part2.flx:128:16
    |
128 |     let idxs = range(0, n)
    |                ^^^^^

Hint:
  Define it first: let range = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day8_part2.flx:130:5
    |
130 |     fold(idxs, [||], /(acc, i) -> {
    |     ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/aoc/2025/aoc_day8_part2.flx:136:29
    |
136 |     let parents0 = to_array(range(0, n))
    |                             ^^^^^

Hint:
  Define it first: let range = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day8_part2.flx:137:27
    |
137 |     let sizes0 = to_array(map(range(0, n), /_ -> 1))
    |                           ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day8_part2.flx:139:5
    |
139 |     fold(sorted_keys, state0, /(st, k) -> union_key(st, k))
    |     ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day8_part2.flx:158:14
    |
158 | let points = [split_ints(trim(line), ",") | line <- lines, trim(line) != ""]
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;

Found 6 errors.
== stdout ==
<not executed>
